# cleaner_bot

./: .dockerignore  .env.prod.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.yaml  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  heroku.yml
.devops/: docker-compose.override.yml.example
.devops/django/: Dockerfile  start-prod.sh
.devops/frontend/: Dockerfile
.github/workflows/: ci.yml  workflow.yml
backend/: .env.example  Makefile  manage.py  pyproject.toml  setup.cfg
backend/apps/: conftest.py
backend/apps/chores/: admin.py  apps.py  enums.py  models.py  serializers.py  urls.py  views.py
backend/apps/chores/migrations/: 0001_initial.py  0002_chorepage_name.py  0003_many_to_many_group_page.py  0004_rename_frequency_field.py  0005_create_history_model.py
backend/apps/chores/tests/: factories.py  test_models.py
backend/apps/users/: adapters.py  admin.py  forms.py  models.py
backend/apps/users/api/: serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0002_alter_user_name.py  0003_user_chore_groups.py
backend/apps/users/tests/: factories.py  test_admin.py
backend/apps/users/tests/test_api/: test_urls.py  test_views.py
backend/config/: urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/requirements/: base.txt  local.txt
frontend/: README.md  jsconfig.json  package.json  quasar.config.js
frontend/src/boot/: axios.js
frontend/src/components/: AddChoreCard.vue  AddChoreDialog.vue  AddChoreGroup.vue  ChoreCard.vue  SidebarLink.vue
(+8 files in other folders)
