[tool.poetry]
name = "cleaner-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytz = "~2023.3.post1"
Pillow = "~10.2.0"
argon2-cffi = "~23.1.0"
whitenoise = "~6.6.0"
redis = "~5.0.1"
hiredis = "~2.2.3"
Django = "~3.2.23"
django-environ = "~0.11.2"
django-model-utils = "~4.3.1"
django-allauth = "~0.57.0"
django-redis = "~5.4.0"
djangorestframework = "~3.14.0"
django-cors-headers = "~4.3.0"
gunicorn = "~21.2.0"
psycopg2 = "~2.9.9"
django-anymail = {extras = ["mailgun"], version = "~10.1"}

[tool.poetry.group.dev.dependencies]
Werkzeug = {extras = ["watchdog"], version = "~3.0.0"}
watchdog = "~3.0.0"
ipdb = "~0.13.13"
psycopg = "~3.1.12"
mypy = "~1.6.1"
django-stubs = "~4.2.5"
pytest = "~7.4.2"
pytest-sugar = "~0.9.7"
djangorestframework-stubs = "~3.14.4"
pytest-factoryboy = "~2.6.0"
pytest-cov = "~4.1.0"
flake8-isort = "~6.1.0"
coverage = "~7.3.2"
black = "~23.10.0"
wemake-python-styleguide = "~0.18.0"
factory-boy = "~3.3.0"
django-debug-toolbar = "~4.2.0"
django-extensions = "~3.2.3"
pytest-django = "~4.5.2"
django-coverage-plugin = "~3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
